syntax = "proto3";

package proto;

option go_package = "go-server/proto";

// 消息类型枚举
enum MessageType {
  UNKNOWN = 0;
  HEARTBEAT = 1;       // 心跳包
  AUTH = 2;            // 认证消息
  CHAT = 3;            // 聊天消息
  SYSTEM = 4;          // 系统消息
  STUDY_ROOM = 5;      // 自习室消息
  FRIEND = 6;          // 好友消息
  PROFILE = 7;         // 个人信息消息
  ERROR = 8;           // 错误消息
}

// 基础消息结构
message Message {
  MessageType type = 1;        // 消息类型
  int64 timestamp = 2;         // 时间戳
  bytes payload = 3;           // 加密后的消息内容
  string session_id = 4;       // 会话ID
}

// 心跳包消息
message HeartbeatMessage {
  int64 timestamp = 1;
}

// 认证消息
message AuthMessage {
  string token = 1;            // 认证令牌
  string device_id = 2;        // 设备标识
}

// 聊天消息
message ChatMessage {
  int32 sender_id = 1;         // 发送者ID
  int32 receiver_id = 2;       // 接收者ID
  string content = 3;          // 消息内容
  string message_type = 4;     // 消息类型(text/image)
}

// 系统消息
message SystemMessage {
  string type = 1;             // 系统消息类型
  string content = 2;          // 消息内容
}

// 自习室消息
message StudyRoomMessage {
  enum Operation {
    CREATE = 0;      // 创建自习室
    JOIN = 1;        // 加入自习室
    LEAVE = 2;       // 离开自习室
    DESTROY = 3;     // 销毁自习室
    GET_DETAIL = 4;  // 获取详情
  }
  Operation operation = 1;    // 操作类型
  int32 room_id = 2;          // 自习室ID
  string name = 3;            // 自习室名称
  int32 max_members = 4;      // 最大成员数
  bool is_private = 5;        // 是否私有
  string duration = 6;        // 持续时间
  string share_link = 7;      // 分享链接
}

// 好友消息
message FriendMessage {
  enum Operation {
    SEND_REQUEST = 0;    // 发送好友请求
    HANDLE_REQUEST = 1;   // 处理好友请求
    GET_LIST = 2;         // 获取好友列表
    DELETE = 3;           // 删除好友
    CREATE_CONTRACT = 4;  // 创建好友契约
    TERMINATE_CONTRACT = 5; // 终止好友契约
    GET_CONTRACTS = 6;    // 获取契约列表
  }
  Operation operation = 1;    // 操作类型
  int32 friend_id = 2;        // 好友ID
  string action = 3;          // 操作动作
  string contract_type = 4;   // 契约类型
  string contract_terms = 5;  // 契约条款
  int32 contract_id = 6;      // 契约ID
}

// 个人信息消息
message ProfileMessage {
  enum Operation {
    UPDATE = 0;    // 更新个人信息
    GET = 1;       // 获取个人信息
  }
  Operation operation = 1;      // 操作类型
  string username = 2;          // 用户名
  string signature = 3;         // 个性签名
  string study_direction = 4;   // 学习方向
}

// 错误消息
message ErrorMessage {
  int32 code = 1;              // 错误码
  string message = 2;          // 错误信息
  string detail = 3;           // 详细错误信息
  string request_id = 4;       // 请求ID，用于追踪
}